--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: rgb(253,193,100);
+  background: linear-gradient(180deg, rgba(253,193,100,1) 0%, rgba(255,241,221,1) 35%, rgba(255,241,221,1) 46%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +29,12 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
