--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .App {
   text-align: center;
+  scroll-behavior: smooth;
+  scroll-margin: 10;
+  
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  /* position: ; */
 }
 
 
@@ -17,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
